<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:orientation="vertical"
    tools:context=".DashBoardFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:text="Income" />

                <TextView
                    android:id="@+id/income_set_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="000.00" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_red_dark"
                    android:text="Expense" />

                <TextView
                    android:id="@+id/expense_set_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:gravity="center"
                    android:text="000.00" />

            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Income:"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:padding="10dp"
                    />
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:id="@+id/recycler_income"
                    android:layout_height="200dp">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Expense:"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:padding="10dp"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:id="@+id/recycler_epense"/>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:gravity="bottom|end"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/expense_ft_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expense"
                    android:textColor="@color/white"
                    android:background="@color/nav_header"
                    android:visibility="invisible"
                    android:padding="3dp"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/expense_Ft_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/expense"
                    android:visibility="invisible"
                    app:fabSize="mini" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/income_ft_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/income"
                    android:textColor="@color/white"
                    android:background="@color/nav_header"
                    android:visibility="invisible"
                    android:padding="3dp"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/income_Ft_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/income"
                    android:visibility="invisible"
                    app:fabSize="mini" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|bottom"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fb_main_plus_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="20dp"
                    android:contentDescription="@string/main_fab_icon"
                    android:src="@drawable/income"
                    app:fabSize="normal" />


            </LinearLayout>


        </LinearLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</LinearLayout>
